# irc_duckdb_bench

./: .env.example  .envrc  .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/: catalog_benchmarks.toml
benchmarks/sql/: run.sql
catalog_benchmark_lib/: __init__.py  cli.py  config.py  http_debug.py  models.py  paths.py  redaction.py  runner.py  sql.py  summary.py
docs/: catalog-benchmarks.md
reports/: engine-matrix-all-20260626-mviz.html  engine-matrix-all-20260626-mviz.md  engine-matrix-all-20260626.csv  full-20260625T0915-dashboard.html  full-20260625T0915.md
reports/mviz-data/engine-matrix-all-20260626/by-catalog/: aws-glue.csv  aws-glue.json  aws-s3-tables.csv  aws-s3-tables.json  horizon.csv  horizon.json  polaris-remote.csv  polaris-remote.json
reports/mviz-data/engine-matrix-all-20260626/by-engine/: duckdb.csv  duckdb.json  pyiceberg.csv  pyiceberg.json  spark.csv  spark.json
reports/mviz-data/engine-matrix-all-20260626/http/: duckdb-http-seconds.csv  duckdb-http-table.csv
reports/mviz-data/engine-matrix-all-20260626/kpis/: kpi-1.json  kpi-2.json  kpi-3.json  kpi-4.json
reports/mviz-data/engine-matrix-all-20260626/notes/: comparison-note.json
scripts/: build_dashboard.py  build_mviz_report.py  catalog_benchmark.py  configure_horizon_schema.sh  doctor.sh  refresh_horizon_token.sh  snowflake_sql_api.py  start_local_polaris.sh  stop_local_polaris.sh
tests/: test_build_dashboard.py  test_build_mviz_report.py  test_catalog_benchmark.py  test_snowflake_sql_api.py  test_standalone_project.py
(+12 files in other folders)
