[project]
name = "irc-duckdb-bench"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
]

[dependency-groups]
dev = [
  "ruff>=0.15.19",
  "ty>=0.0.53",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
